--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>base-html</title>
 <meta name="viewport" content="width=device-width">
 <meta name="format-detection" content="telephone=no">
-<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="./style.css">
 <script src="./common/js/jquery.js"></script>
 <script src="./common/js/functions.js"></script>
 <script src="./common/js/setting.js"></script>
@@ -20,7 +20,7 @@
 
 
 <header id="hd">
-<p class="hd-logo"><a href="/">ロゴ</a></p>
+<p class="hd-logo"><a href="./">ロゴ</a></p>
 
 
 <div id="gnav">
@@ -29,7 +29,7 @@
 <!-- ハンバーガーメニュー内のコンテンツここから -->
 
 <ul class="gnav-nav">
-<li><p><a href="/company/">会社情報</a></p></li>
+<li><p><a href="./company/">会社情報</a></p></li>
 <li>
 <p><a href="./service/">事業紹介</a></p>
 <div class="gnav-nav-sub">
