--- a/index.html
+++ b/index.html
@@ -11,23 +11,18 @@
 <script src="./common/js/setting.js"></script>
 <script src="./common/js/cmn.js"></script>
 </head>
-
 <body class="loading">
 <div id="loading-gif" class="loading-gif-show"></div>
 <div id="container">
 
 
-
-
 <header id="hd">
 <p class="hd-logo"><a href="./">ロゴ</a></p>
-
 
 <div id="gnav">
 <p class="gnav-hamburger"><span></span><span></span><span></span></p>
 <div class="gnav-inner gnav-down">
 <!-- ハンバーガーメニュー内のコンテンツここから -->
-
 <ul class="gnav-nav">
 <li><p><a href="./company/">会社情報</a></p></li>
 <li>
@@ -49,40 +44,45 @@
 <li><p><a href="./news/">ニュース</a></p></li>
 <li><p><a href="./recruit/" target="_blank">採用情報</a></p></li>
 </ul>
-
 <!-- ハンバーガーメニュー内のコンテンツここまで -->
 </div>
 </div>
 <!-- gnav -->
 
-
 </header>
 <!-- header -->
 
 
-
 <main>
+
+
+
 
 <article id="mv">
 </article>
 <!--mv-->
 
+
+
+
 <article id="topics">
 </article>
 <!--topics-->
 
+
+
+
+<div id="pagetop"><p><a href="#container">PAGE<br>TOP</a></p></div>
+
+
+
+
 </main>
-
-
-
 
 <footer id="ft">
 <div class="cr"><p>Copyright 2020 Gripro ltd Corporation</p></div>
 </footer>
 <!-- footer -->
-
-
-
 
 </div>
 <!-- container -->
